--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       "do patti": {
         title: "Dragon Ball prison planet full Movie",
         cover: "unnamed (4).jpg",
-        link: "anime/dragon-ball.html"
+        link: "anime/do pati.html"
       },
     // Load Carousel
     function loadCarousel() {
