--- a/anime/do pati.html
+++ b/anime/do pati.html
@@ -49,8 +49,8 @@
     <div class="mb-4">
       <iframe id="videoPlayer" src="https://drive.google.com/file/d/1tKWemYXcfasBzfLbw0s8rPRKBuVG_yKM/preview" width="100%" height="400" frameborder="0" allow="autoplay" allowfullscreen class="rounded shadow"></iframe>
       <div class="mt-2">
-        <h2 id="episodeTitle" class="text-xl font-semibold">Tokyo Revengers season 1 episode 1</h2>
-        <p id="episodeDesc" class="text-gray-400">Tokyo Revengers season 1 episode 1.</p>
+        <h2 id="episodeTitle" class="text-xl font-semibold">anime/do pati.html</h2>
+        <p id="episodeDesc" class="text-gray-400">anime/do pati.html</p>
         <p id="uploadDate" class="text-gray-600 text-sm">Uploaded: 2025-04-25</p>
       </div>
     </div>
