--- a/index.html
+++ b/index.html
@@ -124,6 +124,11 @@
         title: "Tokyo Revengers season 1",
         cover: "unnamed (2).jpg",
         link: "anime/Tokyo Revengers season 1.html"
+      },
+      "do patti": {
+        title: "Do Patti Movie",
+        cover: "unnamed (4).jpg",
+        link: "anime/do pati.html"
       }
     };
 
