--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       },
       "do patti": {
         title: "Do Patti Movie",
-        cover: "unnamed (4).jpg",
+        cover: "Do-patti-(2024)-hindi-movie.jpg",
         link: "anime/do pati.html"
       }
     };
