--- a/anime/do pati.html
+++ b/anime/do pati.html
@@ -42,15 +42,15 @@
 <body class="bg-black text-white font-mono">
 
   <div class="p-6">
-    <h1 class="text-4xl font-bold text-pink-600">Tokyo Revengers Season 1</h1>
-    <p class="text-gray-400 mb-6">Tokyo Revengers Season 1 in Hindi</p>
+    <h1 class="text-4xl font-bold text-pink-600">Do-patti-(2024)-hindi-movie</h1>
+    <p class="text-gray-400 mb-6">Do-patti-(2024)-hindi-movie</p>
 
     <!-- Video Player -->
     <div class="mb-4">
       <iframe id="videoPlayer" src="https://drive.google.com/file/d/1tKWemYXcfasBzfLbw0s8rPRKBuVG_yKM/preview" width="100%" height="400" frameborder="0" allow="autoplay" allowfullscreen class="rounded shadow"></iframe>
       <div class="mt-2">
-        <h2 id="episodeTitle" class="text-xl font-semibold">anime/do pati.html</h2>
-        <p id="episodeDesc" class="text-gray-400">anime/do pati.html</p>
+        <h2 id="episodeTitle" class="text-xl font-semibold">Do-patti-(2024)-hindi-movie</h2>
+        <p id="episodeDesc" class="text-gray-400">Do-patti-(2024)-hindi-movie</p>
         <p id="uploadDate" class="text-gray-600 text-sm">Uploaded: 2025-04-25</p>
       </div>
     </div>
