Update and rename FLIGHT 914 - Hollywood Action Movie Hindi  html. to FLIGHT 914 - Hollywood Action Movie Hindi  .html

--- a/anime/FLIGHT 914 - Hollywood Action Movie Hindi  .html
+++ b/anime/FLIGHT 914 - Hollywood Action Movie Hindi  .html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Do_Patti_(2024)_Hindi_Movie</title>
+  <title>FLIGHT 914 - Hollywood Action Movie Hindi Dubbed</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     #adBox {
@@ -42,15 +42,15 @@
 <body class="bg-black text-white font-mono">
 
   <div class="p-6">
-    <h1 class="text-4xl font-bold text-pink-600">Do-patti-(2024)-hindi-movie</h1>
-    <p class="text-gray-400 mb-6">Do-patti-(2024)-hindi-movie</p>
+    <h1 class="text-4xl font-bold text-pink-600">FLIGHT 914 - Hollywood Action Movie Hindi Dubbed</h1>
+    <p class="text-gray-400 mb-6">FLIGHT 914 - Hollywood Action Movie Hindi Dubbed</p>
 
     <!-- Video Player -->
     <div class="mb-4">
-      <iframe id="videoPlayer" src="https://drive.google.com/file/d/1um6zVCXO95JjbYul1yIVS7E1idTTQI04/preview" width="100%" height="400" frameborder="0" allow="autoplay" allowfullscreen class="rounded shadow"></iframe>
+      <iframe id="videoPlayer" src="https://drive.google.com/file/d/1GxOd4-9VDTDAgZ83pfC4POVLX8e0Llh1/preview" width="100%" height="400" frameborder="0" allow="autoplay" allowfullscreen class="rounded shadow"></iframe>
       <div class="mt-2">
-        <h2 id="episodeTitle" class="text-xl font-semibold">Do-patti-(2024)-hindi-movie</h2>
-        <p id="episodeDesc" class="text-gray-400">Do-patti-(2024)-hindi-movie</p>
+        <h2 id="episodeTitle" class="text-xl font-semibold">FLIGHT 914 - Hollywood Action Movie Hindi Dubbed</h2>
+        <p id="episodeDesc" class="text-gray-400">FLIGHT 914 - Hollywood Action Movie Hindi Dubbed</p>
         <p id="uploadDate" class="text-gray-600 text-sm">Uploaded: 2025-04-25</p>
       </div>
     </div>
@@ -91,9 +91,9 @@
 
     const episodes = [
       {
-        title: "Do_Patti_(2024)_Hindi_Movie",
-        link: "https://drive.google.com/file/d/1um6zVCXO95JjbYul1yIVS7E1idTTQI04/preview",
-        description: "Do_Patti_(2024)_Hindi_Movie.",
+        title: "FLIGHT 914 - Hollywood Action Movie Hindi Dubbed",
+        link: "https://drive.google.com/file/d/1GxOd4-9VDTDAgZ83pfC4POVLX8e0Llh1/preview",
+        description: "FLIGHT 914 - Hollywood Action Movie Hindi Dubbed",
         uploadDate: "2025-04-25"
       },
      
