Update FLIGHT 914 - Hollywood Action Movie Hindi  .html

--- a/anime/FLIGHT 914 - Hollywood Action Movie Hindi  .html
+++ b/anime/FLIGHT 914 - Hollywood Action Movie Hindi  .html
@@ -50,7 +50,20 @@
       <iframe id="videoPlayer" src="https://drive.google.com/file/d/1GxOd4-9VDTDAgZ83pfC4POVLX8e0Llh1/preview" width="100%" height="400" frameborder="0" allow="autoplay" allowfullscreen class="rounded shadow"></iframe>
       <div class="mt-2">
         <h2 id="episodeTitle" class="text-xl font-semibold">FLIGHT 914 - Hollywood Action Movie Hindi Dubbed</h2>
-        <p id="episodeDesc" class="text-gray-400">FLIGHT 914 - Hollywood Action Movie Hindi Dubbed</p>
+        <p id="episodeDesc" class="text-gray-400 whitespace-pre-line">
+FLIGHT 914
+In the skies, no one can hear you disappear.
+
+In 1955, Flight 914 took off from New York — and vanished without a trace. Now, 37 years later, it reappears in the skies over Miami... untouched, unchanged, and carrying passengers who haven't aged a day.
+
+When government forces race to contain the mystery, a daring air marshal, a rebellious journalist, and a lone survivor must uncover the terrifying truth: Flight 914 didn’t just get lost... it crossed into a hidden dimension controlled by forces beyond imagination.
+
+With time running out and powerful enemies closing in, the battle to reveal the secret of Flight 914 will take them across continents — and into the heart of a conspiracy that could change the world forever.
+
+Get ready for non-stop action, breathtaking aerial battles, and a mystery that will keep you guessing till the final descent.
+
+Flight 914 — some journeys were never meant to end.
+        </p>
         <p id="uploadDate" class="text-gray-600 text-sm">Uploaded: 2025-04-25</p>
       </div>
     </div>
@@ -93,10 +106,20 @@
       {
         title: "FLIGHT 914 - Hollywood Action Movie Hindi Dubbed",
         link: "https://drive.google.com/file/d/1GxOd4-9VDTDAgZ83pfC4POVLX8e0Llh1/preview",
-        description: "FLIGHT 914 - Hollywood Action Movie Hindi Dubbed",
+        description: `FLIGHT 914
+In the skies, no one can hear you disappear.
+
+In 1955, Flight 914 took off from New York — and vanished without a trace. Now, 37 years later, it reappears in the skies over Miami... untouched, unchanged, and carrying passengers who haven't aged a day.
+
+When government forces race to contain the mystery, a daring air marshal, a rebellious journalist, and a lone survivor must uncover the terrifying truth: Flight 914 didn’t just get lost... it crossed into a hidden dimension controlled by forces beyond imagination.
+
+With time running out and powerful enemies closing in, the battle to reveal the secret of Flight 914 will take them across continents — and into the heart of a conspiracy that could change the world forever.
+
+Get ready for non-stop action, breathtaking aerial battles, and a mystery that will keep you guessing till the final descent.
+
+Flight 914 — some journeys were never meant to end.`,
         uploadDate: "2025-04-25"
       },
-     
     ];
 
     const list = document.getElementById('episodeList');
