--- a/index.html
+++ b/index.html
@@ -104,6 +104,11 @@
         title: "Do Patti Movie",
         cover: "Do-patti-(2024)-hindi-movie.jpg",
         link: "anime/do pati.html"
+      },
+      "FLIGHT 914 - Hollywood Action Movie ": {
+        title: "FLIGHT 914 - Hollywood Action Movie ",
+        cover: "Do-patti-(2024)-hindi-movie.jpg",
+        link: "anime/do pati.html"
       }
     };
 
