--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       },
       "FLIGHT 914 - Hollywood Action Movie ": {
         title: "FLIGHT 914 - Hollywood Action Movie ",
-        cover: "Do-patti-(2024)-hindi-movie.jpg",
+        cover: "get.jpg",
         link: "anime/do pati.html"
       }
     };
