--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       "FLIGHT 914 - Hollywood Action Movie ": {
         title: "FLIGHT 914 - Hollywood Action Movie ",
         cover: "get.jpg",
-        link: "anime/do pati.html"
+        link: ""
       }
     };
 
