--- a/index.html
+++ b/index.html
@@ -75,6 +75,12 @@
     </div>
   </div>
 
+  <!-- Your Added Native Banner Ad (newly added below) -->
+  <div class="p-4">
+    <script async="async" data-cfasync="false" src="//pl26487204.profitableratecpm.com/9c8a5fd343f0c339fdb71a4da43f3a35/invoke.js"></script>
+    <div id="container-9c8a5fd343f0c339fdb71a4da43f3a35"></div>
+  </div>
+
   <script>
     window.onbeforeunload = null;
 
