--- a/anime/do pati.html
+++ b/anime/do pati.html
@@ -20,7 +20,6 @@
       cursor: move;
       transition: opacity 0.5s ease;
     }
-    #adBox.hidden { opacity: 0; pointer-events: none; }
     .ad-slot { display: none; }
     .ad-slot.active { display: block; }
     #closeAd {
@@ -57,10 +56,17 @@
 
     <!-- Episode List -->
     <div id="episodeList" class="space-y-3"></div>
+
+    <!-- New Separate Ad Placement -->
+    <div class="mt-6">
+      <script async="async" data-cfasync="false" src="//pl26487204.profitableratecpm.com/9c8a5fd343f0c339fdb71a4da43f3a35/invoke.js"></script>
+      <div id="container-9c8a5fd343f0c339fdb71a4da43f3a35"></div>
+    </div>
+
   </div>
 
-  <!-- Ad Box -->
-  <div id="adBox" onmouseenter="showAdBox()" onmouseleave="startAutoHide()">
+  <!-- Ad Box (old rotating ads) -->
+  <div id="adBox">
     <button id="closeAd" aria-label="Close ad">×</button>
     <div class="ad-slot active" id="ad1">
       <iframe
@@ -87,7 +93,7 @@
   </div>
 
   <script type="text/javascript">
-    window.onbeforeunload = null; // remove "leave site?" prompt
+    window.onbeforeunload = null;
 
     const episodes = [
       {
@@ -95,8 +101,7 @@
         link: "https://drive.google.com/file/d/1um6zVCXO95JjbYul1yIVS7E1idTTQI04/preview",
         description: "Do_Patti_(2024)_Hindi_Movie.",
         uploadDate: "2025-04-25"
-      },
-     
+      }
     ];
 
     const list = document.getElementById('episodeList');
@@ -126,21 +131,7 @@
       document.getElementById(`ad${currentAd}`).classList.add('active');
     }, 10000);
 
-    // Auto-hide ads
-    let hideTimeout;
-    function startAutoHide() {
-      clearTimeout(hideTimeout);
-      hideTimeout = setTimeout(() => {
-        document.getElementById('adBox').classList.add('hidden');
-      }, 30000);
-    }
-    function showAdBox() {
-      clearTimeout(hideTimeout);
-      document.getElementById('adBox').classList.remove('hidden');
-    }
-    startAutoHide();
-
-    // Draggable
+    // Draggable Ad Box
     (function() {
       const box = document.getElementById('adBox');
       let offsetX, offsetY, dragging = false;
@@ -155,7 +146,7 @@
         box.style.left = `${e.clientX - offsetX}px`;
         box.style.top = `${e.clientY - offsetY}px`;
         box.style.bottom = 'auto';
-        box.style.right  = 'auto';
+        box.style.right = 'auto';
       });
       document.addEventListener('mouseup', () => {
         dragging = false;
