--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
       "Shinchan The Legend of Ninja Mononoke (Hindi)": {
         title: "Shinchan The Legend of Ninja Mononoke (Hindi)",
         cover: "unnamed (1).jpg",
-        link: "anime/Shinchan The Legend of Ninja Mononoke (Hindi).html"
+        link: "anime/anime/Shinchan The Legend of Ninja Mononoke (Hindi).html"
       },
       "WIND BREAKER Season 2 in hindi": {
         title: "WIND BREAKER S02E01 1080",
