--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
   <!-- Header with Shrink on Scroll -->
   <header id="header" class="p-4 transition-all duration-300 ease-in-out">
     <img src="unnamed.png" alt="Doosh Hub Logo" class="w-12 h-12 inline-block" />
-    <input type="text" id="search" placeholder="Search anime..." class="w-1/2 p-2 rounded bg-gray-700 text-white placeholder-gray-400" oninput="filterAnime()" />
+    <input type="text" id="search" placeholder="Search animes,movies,drama.." class="w-1/2 p-2 rounded bg-gray-700 text-white placeholder-gray-400" oninput="filterAnime()" />
   </header>
 
   <!-- Welcome Message -->
